k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: flask01.terop-kuber.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask01-service
                port:
                  name: http-flask
